--- a/DesignTechHomesTest/DesignTechHomesTest.csproj
+++ b/DesignTechHomesTest/DesignTechHomesTest.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Scripts\" />
+  </ItemGroup>
+
 </Project>
